--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,3 +25,21 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+ul{
+  margin-top: 35px;
+  margin-left: 150px;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+li{
+display: flex;
+flex-wrap: nowrap;
+gap: 20px;
+}
